Style sub-main, pre-footer, and footer. Finish the project.

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
         Geneva,
         Verdana,
         sans-serif;
+    border-radius: 5px;
 }
 
 .header-title {
@@ -41,6 +42,7 @@ a {
     padding: 30px 80px;
     background-color: khaki;
     flex: 1 1 auto;
+    border-radius: 5px;
 }
 
 .board-title {
@@ -131,4 +133,75 @@ a {
     font-size: 40px;
     font-weight: bold;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.sub-main {
+    background-color: palegoldenrod;
+    display: flex;
+    flex-direction: column;
+    padding: 30px;
+    border-radius: 10px;
+    height: 25vh;
+    justify-content: center;
+    align-items: center;
+}
+
+.sub-main .long-text {
+    font-size: 30px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    margin-bottom: 5px;
+}
+
+.sub-main .name {
+    font-weight: bold;
+    font-style: italic;
+    font-size: 20px;
+    text-align: right;
+}
+
+.pre-footer {
+    margin: 40px 80px;
+    display: flex;
+    background-color: khaki;
+    padding: 30px;
+    justify-content: space-around;
+    align-items: center;
+    border: 3px solid gold;
+    border-radius: 10px;
+}
+
+.pre-footer .pre-bold {
+    font-weight: bold;
+    font-size: 26px;
+    margin-bottom: 5px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+}
+
+.pre-footer .pre-normal {
+    font-size: 20px;
+}
+
+.pre-button {
+    padding: 15px;
+    border-radius: 5px;
+    font-weight: bold;
+    background-color: burlywood;
+}
+
+.button {
+    transition-duration: 0.4s;
+}
+
+button:hover {
+    background-color: gold;
+    color: white;
+}
+
+.footer {
+    background-color: gold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 10vh;
+    border-radius: 5px
 }
